# ai_agent_app

./: .gitignore  README.md
.github/: copilot-instructions.md
backend/: .env.example  README.md  embedding_config.json  load_db.py  main.py  manage_stores.py  pyproject.toml  rebuild_db.py  requirements.txt  sync_deps.py  utils.py
backend/api/: routes.py
backend/backup_original/: main.py
backend/config/: __init__.py  paths.py  settings.py
backend/core/: __init__.py  models.py  types.py
backend/providers/: __init__.py  embeddings.py  llms.py
backend/services/: __init__.py  api_handler_service.py  configuration_service.py  document_service.py  qa_service.py  vector_store_manager.py  vector_store_service.py
